--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Nakul Chawla" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.1/css/v4-shims.css" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
